[fix] if overflow, we ignore

--- a/css/settings/styles.css
+++ b/css/settings/styles.css
@@ -2,6 +2,8 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+
+  overflow: hidden;
 }
 
 .main {
